--- a/src/stylesheet/main.css
+++ b/src/stylesheet/main.css
@@ -13,6 +13,11 @@ html {
   padding: 0;
 }
 
+body {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 400;
+}
+
 ​img {
   max-width: 100%;
   display: block;
