--- a/frontend/src/stylesheet/main.css
+++ b/frontend/src/stylesheet/main.css
@@ -13,10 +13,10 @@ html {
   padding: 0;
 }
 
-body {
+/* body {
   font-family: 'Roboto', Arial, sans-serif;
   font-weight: 400;
-}
+} */
 
 ​img {
   max-width: 100%;
