--- a/frontend/src/pages/ChartExpenseIncome/ChartExpenseIncome.module.css
+++ b/frontend/src/pages/ChartExpenseIncome/ChartExpenseIncome.module.css
@@ -1,18 +1,15 @@
-.ChartTitle{
-    width: 468px;
-    height:70px;
-    background-color:#F3F3F5 ;
-    font-weight: 800;
-font-size: 20px;
-line-height: 70px;
-text-align: center;
-
-
-
+/* .ChartTitle {
+  width: 468px;
+  height: 70px;
+  background-color: #f3f3f5;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 70px;
+  text-align: center;
 }
-.Chart_wrapper{
-    width:468px;
-    height:390px;
-    border:1px solid black;
-    margin-bottom:20px;
-}
+.Chart_wrapper {
+  width: 468px;
+  height: 390px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+} */
