--- a/frontend/src/stylesheet/main.css
+++ b/frontend/src/stylesheet/main.css
@@ -67,5 +67,8 @@ button:focus {
     color: rgb(65, 64, 119);
         color: rgb(119, 64, 119);
         color: rgb(119, 64, 85); */
-           
+}
+
+#svg-sprite {
+  display: none;
 }
